2011-04-15  Shishir Agrawal  <shishir@chromium.org>

        Reviewed by James Robinson.

        Add a flag to guard Page Visibility API changes.
        https://bugs.webkit.org/show_bug.cgi?id=58464

        * Scripts/build-webkit:

2011-04-15  Chang Shu  <cshu@webkit.org>

        Reviewed by Alexey Proskuryakov.

        When a message with url embedded is added to console, the "file:" scheme
        and path should be stripped.
        https://bugs.webkit.org/show_bug.cgi?id=58665

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::lastFileURLPathComponent):
        (WTR::InjectedBundlePage::willAddMessageToConsole):

2011-04-15  Jeff Miller  <jeffm@apple.com>

        Reviewed by Sam Weinig.

        Add takeFocus callback to WKPageUIClient
        https://bugs.webkit.org/show_bug.cgi?id=58686

        Add empty WKPageUIClient entries for the takeFocus callback in the MiniBrowser and WebKitTestRunner.

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]): Added empty takeFocus entry.
        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::create): Added empty takeFocus entry.
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::createOtherPage): Added empty takeFocus entry.
        (WTR::TestController::initialize): Added empty takeFocus entry.

2011-04-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        only show pretty-diff/wdiff if they were generated
        https://bugs.webkit.org/show_bug.cgi?id=58682

        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:
        * Scripts/webkitpy/layout_tests/port/base.py:

2011-04-15  Andreas Kling  <kling@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt] DRT: Default custom policy delegate decision should be Ignore.
